--- a/style/style.css
+++ b/style/style.css
@@ -65,7 +65,7 @@ body{
 	border-radius:50px;
 	background:#19b5ff;
 	color:#fff;
-	padding:10px;
+	padding:11px 10px;
 }
 .news-icon5{
 	font-size:30px;
